--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <title>SlashNotes</title>
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
-    <meta
+    <!-- <meta
       http-equiv="Content-Security-Policy"
       content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data:"
-    />
+    /> -->
     <link rel="stylesheet" type="text/css" href="./styles.css" />
   </head>
 
